--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,30 @@
     물
     <string name="Food">이물질과 물기를 최대한 제거한 후 음식물쓰레기 종량제 봉투에 담아 수거용기에 물이 고이지 않도록 배출. 비닐, 병뚜껑, 이쑤시개, 패각류, 티백 등의 딱딱하거나 포장되어 재활용을 어렵게 하는 물질은 제거 후 배출합니다.</string>
     <string name="Food2">파, 미나리 등의 뿌리. 고추씨, 고추대. 옥수수 껍질, 옥수수대. 섬유질 많은 껍질(양파,마늘). 딱딱한 껍데기(호두, 땅콩). 복숭아 등의 핵과류 씨. 육류의 뼈. 껍데기(갑각류, 어패류). 생선뼈. 알껍질. 각총 차류(녹차 등)의 찌꺼기. 한약재 찌꺼기.</string>
+    <string name="right">알루미늄 캔
+작가 upklyak 출처 Freepik
+
+종이 팩
+Image by tomo_BEGINNER from  Pixabay
+
+
+나무
+Image by Hebi B from Pixabay
+
+플라스틱
+작가 Racool_studio 출처 Freepik
+
+유리병
+작가 mrblmoreno 출처 Freepik
+
+의류
+https://kr.freepik.com/free-photo/fast-fashion-vs-slow-sustainable-fashion_19533990.htm#query=의류&amp;position=1&amp;from_view=search&amp;track=sph
+
+종이
+https://kr.freepik.com/free-photo/fast-fashion-vs-slow-sustainable-fashion_19533990.htm#query=의류&amp;position=1&amp;from_view=search&amp;track=sph
+
+음식
+https://kr.freepik.com/free-photo/fast-fashion-vs-slow-sustainable-fashion_19533990.htm#query=의류&amp;position=1&amp;from_view=search&amp;track=sph
+</string>
+
 </resources>
